--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       color: #fff;
       font-family: Arial, sans-serif;
     }
-    .header { display: flex; justify-content: space-between; align-items: center; padding: 20px 10%; background-color: rgba(0,0,0,0.7); flex-wrap: wrap; }
+    .header { display: flex; justify-content: space-between; align-items: center; padding: 20px 10%; background-color: rgba(0,0,0,0.39); flex-wrap: wrap; }
     .header h1 { margin: 0; color: #00cccc; font-size: 24px; }
     .controls { display: flex; align-items: center; gap: 10px; margin-top: 10px; flex-wrap: wrap; }
     .date-info { color: #00cccc; font-size: 18px; }
@@ -20,9 +20,9 @@
     #stats-container, #scrap-waiting-container { width: 90%; margin: 24px auto; overflow-x: auto; }
     table { width: 100%; border-collapse: collapse; background-color: rgba(0,0,0,0.8); color: #fff; }
     th, td { border: 1px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
-    th { background-color: #005050; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
-    td:first-child { background-color: #111; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
-    th.total-col, td.total-col { background-color: #005050; font-weight: bold; }
+    th { background-color: ##1111116e; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
+    td:first-child { background-color: ##1111116e; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
+    th.total-col, td.total-col { background-color: ##1111116e; font-weight: bold; }
     tfoot td { background-color: #005050; font-weight: bold; }
     .cell-split { display: flex; justify-content: space-between; }
     .scrap { color: #ff5555; }
