--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     th { background-color: ##1111116e; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
     td:first-child { background-color: ##1111116e; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
     th.total-col, td.total-col { background-color: ##1111116e; font-weight: bold; }
-    tfoot td { background-color: #005050; font-weight: bold; }
+    tfoot td { background-color: #00505000; font-weight: bold; }
     .cell-split { display: flex; justify-content: space-between; }
     .scrap { color: #ff5555; }
     .waiting { color: #55ff55; }
