--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     #stats-container, #scrap-waiting-container { width: 90%; margin: 24px auto; overflow-x: auto; }
     table { width: 100%; border-collapse: collapse; background-color: rgba(0,0,0,0.8); color: #fff; }
     th, td { border: 1px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
-    th { background-color: ##1111116e; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
-    td:first-child { background-color: ##1111116e; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
-    th.total-col, td.total-col { background-color: ##1111116e; font-weight: bold; }
+    th { background-color: #00415096; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
+    td:first-child { background-color: ##00415096; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
+    th.total-col, td.total-col { background-color: #1111116e; font-weight: bold; }
     tfoot td { background-color: #00505000; font-weight: bold; }
     .cell-split { display: flex; justify-content: space-between; }
     .scrap { color: #ff5555; }
