--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
       
       let detailHtml = `<td colspan="100%">
         <table class="detail-table">
-          <thead><tr><th>Data</th><th>Serial</th><th>Status</th><th>H-Status</th><th>Matrix</th><th>Description</th></tr></thead>
+          <thead><tr><th>Data</th><th>Serial</th><th>Status</th><th> </th><th>NEW / NP</th><th>Description</th></tr></thead>
           <tbody>
             ${details.map(d => `
               <tr>
