--- a/index.html
+++ b/index.html
@@ -30,10 +30,16 @@
 
     th.total-col, td.total-col { background-color: #004150; font-weight: bold; }
     
-    .detail-row td { background-color: rgba(0, 20, 20, 0.95); padding: 15px; text-align: left; }
-    .detail-table { width: 100%; border: 1px solid #444; background: #111; }
-    .detail-table th { font-size: 12px; background: #222; color: #00cccc; }
-    .detail-table td { font-size: 13px; white-space: normal; text-align: left; border: 1px solid #333; color: inherit; }
+    .detail-row td { background-color: rgba(0, 10, 10, 0.98); padding: 15px; text-align: left; }
+    .detail-table { width: 100%; border: 1px solid #444; background: #000; }
+    .detail-table th { font-size: 12px; background: #1a1a1a; color: #00cccc; }
+    .detail-table td { font-size: 13px; white-space: normal; text-align: left; border: 1px solid #333; }
+
+    /* Вспомогательные стили для статус-текста */
+    .st-ok { color: #55ff55; font-weight: bold; }
+    .st-ndf { color: #ff69b4; font-weight: bold; }
+    .st-scrap { color: #ff4444; font-weight: bold; }
+    .st-waiting { color: #ffff00; font-weight: bold; }
 
     .cell-split { display: flex; justify-content: space-between; }
     .scrap { color: #ff5555; }
@@ -201,7 +207,7 @@
         return sumB - sumA;
       });
 
-      if(people.length===0){ container.innerHTML='<p>Brak данных</p>'; return; }
+      if(people.length===0){ container.innerHTML='<p>Brak danych</p>'; return; }
 
       const table=document.createElement('table');
       const header = `<thead><tr><th>Name</th>${diagonals.map(d=>`<th>${d}</th>`).join('')}<th>Total</th><th>Dni</th></tr></thead>`;
@@ -243,30 +249,32 @@
       detailRow.className = 'detail-row';
       
       let rowsHtml = details.map(d => {
-        let rowStyle = "";
-        let textStyle = "color: white;";
+        let statusClass = "";
+        let rowBg = "transparent";
         const s = d.status.toUpperCase();
 
+        // Вместо заливки всей строки, используем классы для текста + легкий фон для ряда
         if (s.includes('SCRAP')) {
-            rowStyle = "background-color: rgba(150, 0, 0, 0.8);"; // Темно-красный
+            statusClass = "st-scrap";
+            rowBg = "rgba(255, 0, 0, 0.1)"; 
         } else if (s.includes('WAITING')) {
-            rowStyle = "background-color: rgba(180, 180, 0, 0.8);"; // Темно-желтый
-            textStyle = "color: black; font-weight: bold;";
+            statusClass = "st-waiting";
+            rowBg = "rgba(255, 255, 0, 0.05)";
         } else if (s.includes('NDF')) {
-            rowStyle = "background-color: rgba(255, 105, 180, 0.6);"; // Розовый
-            textStyle = "color: black; font-weight: bold;";
+            statusClass = "st-ndf";
+            rowBg = "rgba(255, 105, 180, 0.1)";
         } else if (s === 'OK') {
-            textStyle = "color: #55ff55; font-weight: bold;"; // Просто зеленый текст для OK
+            statusClass = "st-ok";
         }
 
         return `
-          <tr style="${rowStyle}">
-            <td style="${textStyle}">${d.serial}</td>
-            <td style="${textStyle}">${d.status}</td>
-            <td style="${textStyle} font-weight:bold;">${d.finalna}</td>
-            <td style="${textStyle}">${d.statusH}</td>
-            <td style="${textStyle}">${d.matrixStatus}</td>
-            <td style="${textStyle}">${d.description}</td>
+          <tr style="background-color: ${rowBg};">
+            <td class="${statusClass}">${d.serial}</td>
+            <td class="${statusClass}">${d.status}</td>
+            <td class="${statusClass}">${d.finalna}</td>
+            <td class="${statusClass}">${d.statusH}</td>
+            <td class="${statusClass}">${d.matrixStatus}</td>
+            <td class="${statusClass}">${d.description}</td>
           </tr>
         `;
       }).join('');
