--- a/index.html
+++ b/index.html
@@ -285,9 +285,9 @@
                 <th>Serial</th>
                 <th>Status</th>
                 <th>FINALNA</th>
-                <th>H-Status</th>
+                <th> </th>
                 <th>NEW / NP</th>
-                <th>Description</th>
+                <th>Info</th>
               </tr>
             </thead>
             <tbody>
