--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
 
     th.total-col, td.total-col { background-color: #004150; font-weight: bold; }
     
-    .detail-row td { background-color: rgba(61, 67, 67, 0.0); padding: 15px; text-align: left; }
+    .detail-row td { background-color: rgba(61, 67, 67, 0.0); padding: 1px; text-align: Center; }
     .detail-table { width: 100%; border: 1px solid #444; background: #000; }
     .detail-table th { font-size: 12px; background: #1a1a1a; color: #00cccc; }
-    .detail-table td { font-size: 13px; white-space: normal; text-align: left; border: 1px solid #00000000; }
+    .detail-table td { font-size: 13px; white-space: normal; text-align: left; border: 1px solid #000000; }
 
     /* Стили для статусов */
     .st-ndf { color: #ff69b4 !important; font-weight: bold; }
