Update table styles in index.html

--- a/index.html
+++ b/index.html
@@ -21,14 +21,14 @@
 
     #stats-container, #scrap-waiting-container { width: 95%; margin: 24px auto; overflow-x: auto; }
     table { width: 100%; border-collapse: collapse; background-color: rgba(0,0,0,0.8); color: #fff; }
-    th, td { border: 1px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
-    th { background-color: #004150; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
+    th, td { border: 0px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
+    th { background-color: #393939; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
     
     .person-row { cursor: pointer; transition: background 0.3s; }
     .person-row:hover { background-color: rgba(0, 204, 204, 0.2); }
-    td.name-cell { background-color: #004150; font-weight: bold; text-align: left; position: sticky; left: 0; z-index: 1; }
+    td.name-cell { background-color: #393939; font-weight: Medium; text-align: left; position: sticky; left: 0; z-index: 1; }
 
-    th.total-col, td.total-col { background-color: #004150; font-weight: bold; }
+    th.total-col, td.total-col { background-color: #393939; font-weight: bold; }
     
     .detail-row td { background-color: rgba(43, 43, 43, 0.73); padding: 5px; text-align: Center; }
     .detail-table { width: 100%; border: 1px solid #444; background: #000; }
