--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     #stats-container, #scrap-waiting-container { width: 95%; margin: 24px auto; overflow-x: auto; }
     table { width: 100%; border-collapse: collapse; background-color: rgba(0,0,0,0.8); color: #fff; }
-    th, td { border: 0px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap; }
+    th, td { border: 0px solid #555; padding: 8px 10px; text-align: center; font-size: 14px; white-space: nowrap;cursor: pointer; }
     th { background-color: #393939; font-weight: bold; position: sticky; top: 0; z-index: 1; cursor: pointer; }
     
     .person-row { cursor: pointer; transition: background 0.3s; }
