Change background color opacity for name-cell

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     
     .person-row { cursor: pointer; transition: background 0.3s; }
     .person-row:hover { background-color: rgba(0, 204, 204, 0.2); }
-    td.name-cell { background-color: #393939; font-weight: Medium; text-align: left; position: sticky; left: 0; z-index: 1; }
+    td.name-cell { background-color: #39393900; font-weight: Medium; text-align: left; position: sticky; left: 0; z-index: 1; }
 
     th.total-col, td.total-col { background-color: #393939; font-weight: bold; }
     
