Change .st-ok color to white

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     .st-ndf { color: #ff69b4 !important; font-weight: bold; }
     .st-scrap { color: #ff4444 !important; font-weight: bold; }
     .st-waiting { color: #ffff00 !important; font-weight: bold; }
-    .st-ok { color: #00ff88; } 
+    .st-ok { color: #ffffff; } 
 
     .cell-split { display: flex; justify-content: space-around; gap: 10px; }
     .scrap { color: #ff4444; font-weight: bold; }
